--- a/src/components/header/header.module.css
+++ b/src/components/header/header.module.css
@@ -22,6 +22,6 @@
   transition: .2s;
 }
 
-header a:hover {
+.nav:hover {
   color: var(--blue-gradient);
 }
